<resources>
    <string name="app_name">LeeCo</string>
    <string name="cancel">cancel</string>
    <string name="ok">OK</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="send">Send</string>
    <string name="original_problem">View This Problem In Web</string>
    <string name="reload">Reload</string>
    <string name="loading">Loading&#8230;</string>
    <string name="feedback_title">Feedback</string>
    <string name="feedback_hint">Write feedback here</string>
    <string name="feedback_send_successfully">Your feedback has been sent! Thank you!</string>
    <string name="feedback_send_failed">Failed to send your feedback.</string>
    <string name="better_solution_title">Better Solution</string>
    <string name="better_solution_title_for">Better Solution For&#160;</string>
    <string name="better_solution_email_title">Send Your Better Solution</string>
    <string name="better_solution_content">You can send your better solution and the problem title to me. After checking your wonderful solution, I will update the solution. Thanks for making LeeCo better! My e-mail address is\nNightonke@outlook.com</string>
    <string name="better_solution_copy">Copy e-mail address</string>
    <string name="better_solution_copied">E-mail address copied.</string>
    <string name="better_solution_write">Write the e-mail</string>
    <string name="sort_title">Sort By</string>
    <string name="sort_content">Sort by</string>
    <string name="click_to_login">Click to login</string>
    <string name="favorite">Favorites</string>
    <string name="like_postfix">&#160;Likes</string>
    <string name="tag_postfix">&#160;Tags</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="about">About LeeCo</string>
    <string name="logout_title">Sign Out</string>
    <string name="logout_content">Sure to sign out?</string>
    <string name="logout_ok">sign out</string>
    <string name="logout_cancel">cancel</string>
    <string name="login_or_register_title">LeeCo</string>
    <string name="login_or_register_content_1">Welcome to LeeCo! After signing in, you can</string>
    <string name="login_or_register_content_2">COLLECT your favorite problems</string>
    <string name="login_or_register_content_3">WRITE comments</string>
    <string name="login_or_register_content_4">VOTE for comments</string>
    <string name="login_or_register_content_5">GET VOTES from comments</string>
    <string name="login_or_register_content_6">Let\'s join LeeCo right now!</string>
    <string name="login_or_register_login">sign in</string>
    <string name="login_or_register_register">sign up</string>
    <string name="login_or_register_cancel">cancel</string>
    <string name="login_title">Sign In</string>
    <string name="login_user_name_hint">User name</string>
    <string name="login_password_hint">Password</string>
    <string name="login_ok">sign in</string>
    <string name="login_forget_password">Forget password</string>
    <string name="login_cancel">cancel</string>
    <string name="login_empty_user_name">Empty user name</string>
    <string name="login_empty_password">Empty password</string>
    <string name="login_internet_error">Internet disconnected</string>
    <string name="login_no_user">User not found</string>
    <string name="login_password_error">Password wrong</string>
    <string name="login_user_name_or_password_error">Incorrect user name or password</string>
    <string name="login_ing">Signing in&#8230;</string>
    <string name="login_successfully">Sign in successfully</string>
    <string name="forget_password_title">Forget Password</string>
    <string name="forget_password_content">Sorry to hear that you forget your password. You can send me an e-mail to get your password back. My e-mail address is\nNightonke@outlook.com</string>
    <string name="forget_password_write">write the e-mail</string>
    <string name="forget_password_copy">copy e-mail address</string>
    <string name="forget_password_cancel">cancel</string>
    <string name="forget_password_email_title">Get Your Password Back</string>
    <string name="forget_password_copied">E-mail address copied.</string>
    <string name="register_title">Sign Up</string>
    <string name="register_user_name_hint">User name</string>
    <string name="register_user_name_length">20 letters or 10 Chinese characters</string>
    <string name="register_password_hint">Password</string>
    <string name="register_password_hint_again">Password again</string>
    <string name="register_ok">sign up</string>
    <string name="register_cancel">cancel</string>
    <string name="register_empty_user_name">Empty user name</string>
    <string name="register_invalid_user_name">Invalid user name</string>
    <string name="register_empty_password">Empty password</string>
    <string name="register_empty_password_again">Please type your password again</string>
    <string name="register_internet_error">Internet disconnected</string>
    <string name="register_repeat_user">User name existed</string>
    <string name="register_password_error">Passwords are different</string>
    <string name="register_ing">Signing up&#8230;</string>
    <string name="register_successfully">Sign up successfully</string>
    <string name="like_not_login">Please sign in first</string>
    <string name="like_like_successfully">Collect this problem successfully</string>
    <string name="like_like_failed">Collect this problem failed,\ninternet disconnected</string>
    <string name="like_dislike_successfully">Throw this problem successfully</string>
    <string name="like_dislike_failed">Throw this problem failed,\ninternet disconnected</string>
    <string name="favorite_activity_title">Favorites</string>
    <string name="comment_activity_title">Comment</string>
    <string name="settings_activity_title">Settings</string>
    <string name="feedback_activity_title">Feedback</string>
    <string name="about_activity_title">About</string>
    <string name="help_activity_title">Help</string>
    <string name="sorting">Sorting&#8230;</string>
    <string name="researching">Researching&#8230;</string>
    <string name="searching">Searching&#8230;</string>
    <string name="data_not_found">Data not found,\nplease refresh data</string>
    <string name="loading_failed">Load failed, internet disconnected</string>
    <string name="view">VIEW</string>
    <string name="collect_title">Collect</string>
    <string name="collect_content">Collect this problem?</string>
    <string name="collect_ok">collect</string>
    <string name="collect_cancel">cancel</string>
    <string name="dis_collect_title">Throw</string>
    <string name="dis_collect_content">Throw this problem from your favorite?</string>
    <string name="dis_collect_ok">throw</string>
    <string name="dis_collect_cancel">cancel</string>
    <string name="refresh">Refresh</string>
    <string name="share">Share</string>
    <string name="copy_link">Copy Link</string>
    <string name="copy_link_toast">Link copied</string>
    <string name="open_with">Open With</string>
    <string name="comment_re">Re:&#160;</string>
    <string name="comment_by">By&#160;</string>
    <string name="comment_title_hint">Title</string>
    <string name="comment_content_hint">Write comment here</string>
    <string name="comment_helper">Let\'s find better solutions!</string>
    <string name="comment_unchanged">Title and content are both unchanged</string>
    <string name="comment_not_login">Please sign in first</string>
    <string name="comment_not_title">Empty title</string>
    <string name="comment_invalid_title">Invalid title</string>
    <string name="comment_not_content">Empty content</string>
    <string name="comment_invalid_content">Invalid content</string>
    <string name="comment_send_successfully">Add comment successfully</string>
    <string name="comment_send_failed">Add failed, internet disconnected</string>
    <string name="comment_not_send_title">Add Comment</string>
    <string name="comment_not_send_content">Your comment has not been sent, sure to quit? The comment you edited will not be saved.</string>
    <string name="comment_not_send_quit">Quit</string>
    <string name="comment_not_send_send">Send</string>
    <string name="comment_not_send_cancel">Cancel</string>
    <string name="comment_update_successfully">Update comment successfully</string>
    <string name="comment_update_failed">Update failed, internet disconnected</string>
    <string name="comment_not_update_title">Update Comment</string>
    <string name="comment_not_update_content">Your comment has not been updated, sure to quit? The comment you edited will not be saved.</string>
    <string name="comment_not_update_quit">Quit</string>
    <string name="comment_not_update_update">Update</string>
    <string name="comment_not_update_cancel">Cancel</string>
    <string name="comment_delete_successfully">Delete comment successfully</string>
    <string name="comment_delete_failed">Delete failed, internet disconnected</string>
    <string name="comment_like_successfully">Vote comment successfully</string>
    <string name="comment_like_failed">Vote failed, internet disconnected</string>
    <string name="comment_dislike_successfully">Veto comment successfully</string>
    <string name="comment_dislike_failed">Veto failed, internet disconnected</string>
    <string name="comment_copy">Content copied</string>
    <string name="operate_title">Operate</string>
    <string name="operate_edit">Edit this Comment</string>
    <string name="operate_delete">Delete this Comment</string>
    <string name="operate_copy">Copy the Content</string>
    <string name="operate_reply">Reply this Comment</string>
    <string name="operate_like">Vote this Comment</string>
    <string name="operate_dislike">Veto this Comment</string>
    <string name="problem_index_is_loading">Problems are still loading, please wait</string>
    <string name="problem_is_loading">Problem is still loading, please wait</string>
    <string name="solution_copied">Solution copied</string>
    <string name="tag_hint">Tag</string>
    <string name="tags_hint">Tags</string>
    <string name="similar_problem_hint">Similar Problem</string>
    <string name="similar_problems_hint">Similar Problems</string>
    <string name="change_user_name_not_login">Please sign in first</string>
    <string name="change_user_name_empty_user_name">Empty user name</string>
    <string name="change_user_name_old_helper">Old user name</string>
    <string name="change_user_name_new_hint">New user name</string>
    <string name="change_user_name_new_helper">20 letters or 10 Chinese characters</string>
    <string name="feedback_helper">Let\'s make LeeCo better!</string>
    <string name="about_app_title">LeeCo</string>
    <string name="about_app_more">
        LeeCo is a personal application for LeetCode(leetcode.com/problemset/algorithms/).
        With LeeCo, you can read all the problems(including the locked problems), collect your favorite problems and see how many people collected them as well.
        There is a sample solution for each problem for everyone to comment on.
        The discusses on the LeetCode are list in LeeCo too, with these you can think more about algorithms and data structures.
        And also, you can write comments for problems just like everyone does.
        If you like some comments, you can vote for them or reply them.
        You can get many votes for your own(that\'s a record for everyone) if your comments are so great.
        For more information about LeeCo, you can check the help in the drawer menu in the left of the main page.
        Now, join algorithms and data structures with LeeCo!
    </string>
    <string name="about_developer_tip">Follow Me!</string>
</resources>