<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_or_register_content_1"
        android:textSize="16sp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="25dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        >

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/icon_point"
            android:scaleType="fitCenter"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_or_register_content_2"
            android:layout_gravity="center_vertical|left"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:layout_marginTop="1dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        >

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/icon_point"
            android:scaleType="fitCenter"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_or_register_content_3"
            android:layout_gravity="center_vertical|left"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:layout_marginTop="1dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        >

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/icon_point"
            android:scaleType="fitCenter"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_or_register_content_4"
            android:layout_gravity="center_vertical|left"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:layout_marginTop="1dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="5dp"
        >

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/icon_point"
            android:scaleType="fitCenter"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_or_register_content_5"
            android:layout_gravity="center_vertical|left"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:layout_marginTop="1dp"
            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_or_register_content_6"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="25dp"
        android:textSize="16sp"
        />

</LinearLayout>