<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/old_user_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textCursorDrawable="@null"
        android:textColor="@color/colorPrimary"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:inputType="none"
        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="right|top"
        android:text="@string/change_user_name_old_helper"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        android:layout_marginTop="-5dp"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="30dp"
        />

    <EditText
        android:id="@+id/new_user_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textCursorDrawable="@null"
        android:textColor="@color/colorPrimary"
        android:inputType="text"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:hint="@string/change_user_name_new_hint"
        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="right|top"
        android:text="@string/change_user_name_new_helper"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        android:layout_marginTop="-5dp"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="30dp"
        />

</LinearLayout>