<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical|start"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:inputType="text"
        android:hint="@string/feedback_title"
        android:textCursorDrawable="@null"
        android:textColorHint="@color/white"
        android:textSize="25sp"
        android:maxLines="1"
        android:singleLine="true"
        />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            >

            <EditText
                android:id="@+id/edittext"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:text=""
                android:inputType="textMultiLine"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:background="@null"
                android:minLines="3"
                android:hint="@string/feedback_hint"
                android:gravity="left|top"
                />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="0.5sp"
                android:background="?android:attr/listDivider"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/helper"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/feedback_helper"
                    android:gravity="left|center_vertical"
                    android:textColor="@color/colorPrimary"
                    android:paddingLeft="10dp"
                    />

                <TextView
                    android:id="@+id/number"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="123/400"
                    android:gravity="right|center_vertical"
                    android:textColor="@color/black"
                    android:paddingRight="10dp"
                    />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
