<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="?android:selectableItemBackground"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            >

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/about_app_title"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:gravity="left|center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:textColor="@color/white"
                android:text="@string/about_developer_tip"
                android:background="@drawable/background_follow"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:gravity="center"
                android:visibility="gone"
                />

        </RelativeLayout>

    </LinearLayout>

    <com.github.aakira.expandablelayout.ExpandableRelativeLayout
        android:id="@+id/expandable_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ael_expanded="true"
        app:ael_duration="500"
        android:background="?android:selectableItemBackground"
        app:ael_orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5sp"
            android:background="?android:attr/listDivider"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />

        <TextView
            android:id="@+id/detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:text="@string/about_app_more"
            android:textSize="13sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@+id/image"
            />

    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5sp"
        android:background="?android:attr/listDivider"
        />

</LinearLayout>